test/expected/cli/eval_function_body_error_location.out
== default mood, literal eval argument ==
shit: 1:32: warning: Command 'f' was not found.
     1 |  eval "f(){ echo \$((1/0)); }"; f
       |                                 ^~ here.
note: Did you mean ':'?
shit: 1:34: trace location:
     1 |  /Users/sd/Projects/shit/shit-dbg -c eval "f(){ echo \$((1/0)); }"; f
       |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
shit: eval:2:8: error: Division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
note: The right operand evaluated to 0.
rc=1
== bash mood, literal eval argument ==
shit: eval:2:8: error: Division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
note: The right operand evaluated to 0.
rc=1
== default mood, eval of a variable ==
shit: 1:61: warning: Command 'h' was not found.
     1 |  code=$(printf "%s" "h(){ echo \$((1/0)); }"); eval "$code"; h
       |                                                              ^~ here.
note: Did you mean ':'?
shit: 1:34: trace location:
     1 |  /Users/sd/Projects/shit/shit-dbg -c code=$(printf "%s" "h(){ echo \$((1/0)); }"); eval "$code"; h
       |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
shit: eval:2:8: error: Division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
note: The right operand evaluated to 0.
rc=1
== bash mood, function keyword form ==
shit: eval:2:8: error: Division by zero.
     2 |  { echo $((1/0)); }
       |         ^~~~~~~~ here.
note: The right operand evaluated to 0.
rc=1
== function defined in default mood, called from bash, renders once ==
0
